--- a/Integers,_Floats_&_Booleans.ipynb
+++ b/Integers,_Floats_&_Booleans.ipynb
@@ -531,15 +531,7 @@
         "id": "BNWS99YXJbPX",
         "outputId": "783ce05d-7aac-4083-8216-9d4b1fed01f7"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "11\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Addition\n",
         "z = x+y\n",
@@ -1620,7 +1612,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.9 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -1634,7 +1626,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.4"
+      "version": "3.8.9"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+      }
     }
   },
   "nbformat": 4,
