--- a/Assignment_Integers,_Floats_&_Booleans.ipynb
+++ b/Assignment_Integers,_Floats_&_Booleans.ipynb
@@ -1,28 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.4"
-    },
-    "colab": {
-      "provenance": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -51,52 +27,52 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "m68YV3OhDelZ"
       },
+      "outputs": [],
       "source": [
         "# The outcome variables are defined below\n",
         "wins = 4\n",
         "losses = 3\n",
         "draws = 1"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "2cnTsWvODelc"
       },
+      "outputs": [],
       "source": [
         "# Calculate the total points gained by Team Aravali\n",
         "aravali_points = ((wins*3)+(draws*1)+(losses)*0)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "4ccas7cPDelf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "4ccas7cPDelf",
         "outputId": "5b46ae57-43d7-4dd0-9743-1bb7d74bb457"
       },
-      "source": [
-        "# Print the variable aravali_points\n",
-        "print(aravali_points)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "13\n"
           ]
         }
+      ],
+      "source": [
+        "# Print the variable aravali_points\n",
+        "print(aravali_points)"
       ]
     },
     {
@@ -115,124 +91,124 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "4_HZwes5Delh"
       },
+      "outputs": [],
       "source": [
         "# Calculate the value of the function f(x) at x = 2\n",
         "x=2\n",
         "func_evaluated_at_2=(x**2)+(3*x)-4"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "zBkLIXk2Dell",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "zBkLIXk2Dell",
         "outputId": "0f821759-3123-46da-9a1d-0c654a585028"
       },
-      "source": [
-        "# Print the value below\n",
-        "print(func_evaluated_at_2)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "6\n"
           ]
         }
+      ],
+      "source": [
+        "# Print the value below\n",
+        "print(func_evaluated_at_2)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "uD4MAyKIDelo"
       },
+      "outputs": [],
       "source": [
         "# Calculate the value of the function f(x) at x = -1\n",
         "x=-1\n",
         "func_evaluated_at_minus1 = (x**2)+(3*x)-4"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Jx9WVMQ2Delq",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7cd57746-0411-462a-dbe2-973dbd04391b"
-      },
-      "source": [
-        "# Print the value below\n",
-        "print(func_evaluated_at_minus1 )"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "-6\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jx9WVMQ2Delq",
+        "outputId": "7cd57746-0411-462a-dbe2-973dbd04391b"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-6\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Print the value below\n",
+        "print(func_evaluated_at_minus1 )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "h8PgF85VDelu"
       },
+      "outputs": [],
       "source": [
         "# Calculate the value of the function f(x) at x = 1\n",
         "x=1\n",
         "func_evaluated_at_1 = (x**2)+(3*x)-4"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "BdrFgug6Delw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "BdrFgug6Delw",
         "outputId": "03b7364d-abca-404a-9906-aeee21c84f9a"
       },
-      "source": [
-        "# Print the type of the variable below\n",
-        "print(func_evaluated_at_1)\n",
-        "type(func_evaluated_at_1)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "int"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# Print the type of the variable below\n",
+        "print(func_evaluated_at_1)\n",
+        "type(func_evaluated_at_1)"
       ]
     },
     {
@@ -246,83 +222,83 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "-tUSAgzgDel0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "-tUSAgzgDel0",
         "outputId": "61b8d369-b7cf-4a0a-b237-d6e1396e5014"
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Check whether 2 is a root of f(x)\n",
         "func_evaluated_at_2 == 0"
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gsNS4Ki4Del2",
+        "outputId": "c9955734-e1c2-46a0-f1f3-fe91e6d9db18"
+      },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
+          "execution_count": 22,
           "metadata": {},
-          "execution_count": 21
+          "output_type": "execute_result"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gsNS4Ki4Del2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c9955734-e1c2-46a0-f1f3-fe91e6d9db18"
-      },
+      ],
       "source": [
         "# Check whether -1 is a root of f(x)\n",
         "func_evaluated_at_minus1==0"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "yExDY-ZXDel4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "yExDY-ZXDel4",
         "outputId": "99d419db-6a5a-4aef-c2d0-eb6db1bcdda9"
       },
-      "source": [
-        "# Check whether 1 is a root of f(x)\n",
-        "func_evaluated_at_1==0"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 23,
           "metadata": {},
-          "execution_count": 23
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# Check whether 1 is a root of f(x)\n",
+        "func_evaluated_at_1==0"
       ]
     },
     {
@@ -338,13 +314,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "XJ9Rq4P3Del7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "XJ9Rq4P3Del7",
         "outputId": "03465823-fd7b-405a-f4d7-69b87efb49b4"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "32.142857142857146\n"
+          ]
+        }
+      ],
       "source": [
         "# Calculate the percentage of apples and print the variable\n",
         "apples=45\n",
@@ -352,66 +338,56 @@
         "bananas=30\n",
         "percentage_apple=apples/(apples+oranges+bananas)*100\n",
         "print(percentage_apple)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "32.142857142857146\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "S6lJZtaXDel9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "S6lJZtaXDel9",
         "outputId": "a1488974-9545-4293-c820-53d59f9fa9c2"
       },
-      "source": [
-        "# Calculate the percentage of oranges and print the variable\n",
-        "percentage_oranges=oranges/(apples+oranges+bananas)*100\n",
-        "print(percentage_oranges)\n"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "46.42857142857143\n"
           ]
         }
+      ],
+      "source": [
+        "# Calculate the percentage of oranges and print the variable\n",
+        "percentage_oranges=oranges/(apples+oranges+bananas)*100\n",
+        "print(percentage_oranges)\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "mHzMnSZrDemB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "mHzMnSZrDemB",
         "outputId": "f7b540db-6451-4f52-f4f1-2ea586558ce5"
       },
-      "source": [
-        "# Calculate the percentage of bananas and print the variable\n",
-        "percentage_bananas=bananas/(apples+oranges+bananas)*100\n",
-        "print(percentage_bananas)\n"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "21.428571428571427\n"
           ]
         }
+      ],
+      "source": [
+        "# Calculate the percentage of bananas and print the variable\n",
+        "percentage_bananas=bananas/(apples+oranges+bananas)*100\n",
+        "print(percentage_bananas)\n"
       ]
     },
     {
@@ -444,9 +420,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "OfXY9LcVDemF"
       },
+      "outputs": [],
       "source": [
         "# Store the number of Maths majors\n",
         "\n",
@@ -470,9 +448,7 @@
         "# Store the number of your correct guesses of Physics majors\n",
         "\n",
         "correct_guess_physics=20"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -485,80 +461,80 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "QUbDKOR3DemJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "QUbDKOR3DemJ",
         "outputId": "11158dae-1d5f-4369-c321-431b818e2a0f"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "66.66666666666666\n"
+          ]
+        }
+      ],
       "source": [
         "# Print the Maths accuracy\n",
         "maths_accuracy=(correct_guesses_maths/maths_majors)*100\n",
         " \n",
         "print(maths_accuracy)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "66.66666666666666\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "PfX4DowhDemM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "PfX4DowhDemM",
         "outputId": "0808f961-a50b-4c0d-967a-fe8cadcc5d40"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "66.66666666666666\n"
+          ]
+        }
+      ],
       "source": [
         "# Print the Economics accuracy\n",
         "\n",
         "economics_accuracy=(correct_guess_economics/economics_majors)*100\n",
         "print(economics_accuracy)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "66.66666666666666\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "ZV-hzGKCDemP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "ZV-hzGKCDemP",
         "outputId": "4f1469cf-689b-4d4c-b2d3-ee43330d87c3"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "80.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Print the Physics accuracy\n",
         "\n",
         "physics_accuracy=(correct_guess_physics/physics_majors)*100\n",
         "print(physics_accuracy)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "80.0\n"
-          ]
-        }
       ]
     },
     {
@@ -572,29 +548,58 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "eP3JkusLDemT",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "eP3JkusLDemT",
         "outputId": "d04f40e2-13f1-4d38-fa3e-ff060826c746"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "70.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Print the overall accuracy\n",
         "\n",
         "overall_accuracy=(correct_guess_economics+correct_guess_physics+correct_guess_physics)/(economics_majors+physics_majors+maths_majors)*100\n",
         "print(overall_accuracy)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "70.0\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.14 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.14"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "397704579725e15f5c7cb49fe5f0341eb7531c82d19f2c29d197e8b64ab5776b"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
