--- a/Assignment_Statements,_Indentation_and_Conditionals.ipynb
+++ b/Assignment_Statements,_Indentation_and_Conditionals.ipynb
@@ -1,28 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.4"
-    },
-    "colab": {
-      "provenance": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -54,18 +30,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "RxVZTrenzfHC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "RxVZTrenzfHC",
         "outputId": "1b00ad02-7519-487a-f314-3f35d93a1a23"
       },
-      "source": [
-        "# Take a proper date input from the user in the format YYYY-MM-DD. Consider this date as a string\n",
-        "user_date = input()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -74,17 +46,31 @@
             "2020-09-01\n"
           ]
         }
+      ],
+      "source": [
+        "# Take a proper date input from the user in the format YYYY-MM-DD. Consider this date as a string\n",
+        "user_date = input()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "N1Yhpkiws8B3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "N1Yhpkiws8B3",
         "outputId": "c313fd48-f642-4f26-ca3f-efc118065d37"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2020-Q3\n"
+          ]
+        }
+      ],
       "source": [
         "# Write your code using if else statements to extract the quarter\n",
         "\n",
@@ -110,40 +96,30 @@
         "\n",
         "# Store the quarter value in a string variable named quarter\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2020-Q3\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "KpMdlB5Fs8B8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "KpMdlB5Fs8B8",
         "outputId": "548bb382-e83a-4c66-be0a-2f95b6716301"
       },
-      "source": [
-        "# Print the extracted quarter\n",
-        "print(quarter)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2020Q-2\n"
           ]
         }
+      ],
+      "source": [
+        "# Print the extracted quarter\n",
+        "print(quarter)"
       ]
     },
     {
@@ -159,9 +135,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "FBJy9Sq_s8CN"
       },
+      "outputs": [],
       "source": [
         "# Surveyed data \n",
         "\n",
@@ -171,9 +149,7 @@
         "                  'Height' : [172,175,170,168,170],\n",
         "                  'Weight' : [70,82,60,55,64]\n",
         "                 }"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -186,13 +162,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "zywXa51d6Eev",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "zywXa51d6Eev",
         "outputId": "fa41a1e0-9392-4f49-ca35-a538503c8c75"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "171.0\n",
+            "170\n",
+            "66.2\n",
+            "64\n"
+          ]
+        }
+      ],
       "source": [
         "# Calculate the mean height and print it\n",
         "\n",
@@ -233,19 +222,6 @@
         "  y.sort()\n",
         "  Weight_median= y[int(x/2)]\n",
         "  print(Weight_median)\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "171.0\n",
-            "170\n",
-            "66.2\n",
-            "64\n"
-          ]
-        }
       ]
     },
     {
@@ -259,28 +235,28 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "wef2fVgx6Gji",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "wef2fVgx6Gji",
         "outputId": "88b895a0-465a-4ad5-bbb4-742b2195795d"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[42, 29, 35]\n"
+          ]
+        }
+      ],
       "source": [
         "# Python code to print the first three elements for the key 'Age'\n",
         "\n",
         "ages = locality_data['Age'][:3]\n",
         "print(ages)\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[42, 29, 35]\n"
-          ]
-        }
       ]
     },
     {
@@ -294,29 +270,29 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "TBRZzwAcRTNL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "TBRZzwAcRTNL",
         "outputId": "c01f7911-8957-4019-fbf1-8ead8bde42e8"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Rashmi', 'Vaishali']\n"
+          ]
+        }
+      ],
       "source": [
         "Names= locality_data['Name'][-2:]\n",
         "if 'Rashmi' in Names:\n",
         "  print(Names)\n",
         "else:\n",
         "  print('Name not found')\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['Rashmi', 'Vaishali']\n"
-          ]
-        }
       ]
     },
     {
@@ -336,23 +312,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "C5olNuDGs8CU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "C5olNuDGs8CU",
         "outputId": "190fab26-84cb-49c6-bbd5-57fe3ab19fc6"
       },
-      "source": [
-        "# Enter your input\n",
-        "\n",
-        "print(\"Number of classes held\")\n",
-        "classes_held = int(input())\n",
-        "\n",
-        "print(\"Number of classes attended\")\n",
-        "classes_attended = int(input())"
-      ],
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -364,32 +331,41 @@
             "15\n"
           ]
         }
+      ],
+      "source": [
+        "# Enter your input\n",
+        "\n",
+        "print(\"Number of classes held\")\n",
+        "classes_held = int(input())\n",
+        "\n",
+        "print(\"Number of classes attended\")\n",
+        "classes_attended = int(input())"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "i553Hqamm2jR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "i553Hqamm2jR",
         "outputId": "9e28edc9-dddc-4809-cc75-3994a3fa0404"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The attendance is 75.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Calculate the attendance percentage\n",
         "attendance = classes_attended*100/classes_held\n",
         "\n",
         "print(f'The attendance is {attendance}')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The attendance is 75.0\n"
-          ]
-        }
       ]
     },
     {
@@ -406,29 +382,29 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "SoQ3P0yym2ts",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "SoQ3P0yym2ts",
         "outputId": "1f7876cb-3cdf-4d98-b64d-c84db24a0a89"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "student is allowed to sit in exam  his total attendance % is 75.0  \n"
+          ]
+        }
+      ],
       "source": [
         "# Your code here \n",
         "if attendance<0.75:\n",
         "  print(f\"student is not allowed to sit in exam due to class attended % is { attendance} \")\n",
         "else:\n",
         "  print(f\"student is allowed to sit in exam  his total attendance % is { attendance}  \")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "student is allowed to sit in exam  his total attendance % is 75.0  \n"
-          ]
-        }
       ]
     },
     {
@@ -454,19 +430,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "ySeGyCtCs8Cg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "ySeGyCtCs8Cg",
         "outputId": "c7392e77-9506-48c0-88c2-26efc9da895d"
       },
-      "source": [
-        "# Your input here \n",
-        "print(\"Enter your marks\")\n",
-        "marks = int(input())"
-      ],
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -476,17 +447,32 @@
             "24\n"
           ]
         }
+      ],
+      "source": [
+        "# Your input here \n",
+        "print(\"Enter your marks\")\n",
+        "marks = int(input())"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "MI7mOHaqs8Cj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "MI7mOHaqs8Cj",
         "outputId": "ae14d828-0030-4152-91fa-63d90d2c6468"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Grade F\n"
+          ]
+        }
+      ],
       "source": [
         "# Your code here to print the corresponding grade\n",
         "if marks<25:\n",
@@ -504,17 +490,36 @@
         "else:\n",
         "  print(\"invalid\")\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Grade F\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.14 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.14"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "397704579725e15f5c7cb49fe5f0341eb7531c82d19f2c29d197e8b64ab5776b"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
